[package]
name = "crustyc3"
version = "0.1.0"
authors = ["Knarkzel <knarkzel@gmail.com>"]
edition = "2021"
license = "GPLv3"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.12.0" }
esp-backtrace = { version = "0.8.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32c3"] }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "887eb22", features = ["esp32c3", "wifi", "ble", "esp-now"] }
smoltcp = { version = "0.10.0", default-features = false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
embedded-graphics = "0.8.1"
ssd1306 = "0.8.3"
micromath = "2.0.0"
critical-section = "1.1.2"
riscv = "0.10.1"
bleps = { git = "https://github.com/bjoernQ/bleps", version = "0.1.0" }
ili9341 = "0.5.0"
display-interface-spi = "0.4.1"
mipidsi = "0.7.1"
fugit = "0.3.7"
